// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemStatusCard should not render hasLastCheckIn 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Current state title"
                class=""
                data-ouia-component-id="Current state title"
              >
                Current state
              </dt>
              <dd
                aria-label="Current state value"
                class=""
                data-ouia-component-id="Current state value"
              >
                Active
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014 00:00 UTC
              </dd>
              <dt
                aria-label="Last updated title"
                class=""
                data-ouia-component-id="Last updated title"
              >
                Last updated
              </dt>
              <dd
                aria-label="Last updated value"
                class=""
                data-ouia-component-id="Last updated value"
              >
                01 Jun 2014 00:00 UTC
              </dd>
              <dt
                aria-label="RHC title"
                class=""
                data-ouia-component-id="RHC title"
              >
                <span>
                  RHC
                </span>
                <div
                  style="display: contents;"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Action for RHC"
                    class="pf-v5-c-button pf-m-plain ins-active-general_information__popover-icon"
                    data-ouia-component-id="OUIA-Generated-Button-plain-4"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                      />
                    </svg>
                  </button>
                </div>
              </dt>
              <dd
                aria-label="RHC value"
                class=""
                data-ouia-component-id="RHC value"
              >
                Connected
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasRHC 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Current state title"
                class=""
                data-ouia-component-id="Current state title"
              >
                Current state
              </dt>
              <dd
                aria-label="Current state value"
                class=""
                data-ouia-component-id="Current state value"
              >
                Active
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014 00:00 UTC
              </dd>
              <dt
                aria-label="Last seen title"
                class=""
                data-ouia-component-id="Last seen title"
              >
                Last seen
              </dt>
              <dd
                aria-label="Last seen value"
                class=""
                data-ouia-component-id="Last seen value"
              >
                06 Mar 2025 00:00 UTC
              </dd>
              <dt
                aria-label="Last updated title"
                class=""
                data-ouia-component-id="Last updated title"
              >
                Last updated
              </dt>
              <dd
                aria-label="Last updated value"
                class=""
                data-ouia-component-id="Last updated value"
              >
                01 Jun 2014 00:00 UTC
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasRegistered 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Current state title"
                class=""
                data-ouia-component-id="Current state title"
              >
                Current state
              </dt>
              <dd
                aria-label="Current state value"
                class=""
                data-ouia-component-id="Current state value"
              >
                Active
              </dd>
              <dt
                aria-label="Last seen title"
                class=""
                data-ouia-component-id="Last seen title"
              >
                Last seen
              </dt>
              <dd
                aria-label="Last seen value"
                class=""
                data-ouia-component-id="Last seen value"
              >
                06 Mar 2025 00:00 UTC
              </dd>
              <dt
                aria-label="Last updated title"
                class=""
                data-ouia-component-id="Last updated title"
              >
                Last updated
              </dt>
              <dd
                aria-label="Last updated value"
                class=""
                data-ouia-component-id="Last updated value"
              >
                01 Jun 2014 00:00 UTC
              </dd>
              <dt
                aria-label="RHC title"
                class=""
                data-ouia-component-id="RHC title"
              >
                <span>
                  RHC
                </span>
                <div
                  style="display: contents;"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Action for RHC"
                    class="pf-v5-c-button pf-m-plain ins-active-general_information__popover-icon"
                    data-ouia-component-id="OUIA-Generated-Button-plain-5"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                      />
                    </svg>
                  </button>
                </div>
              </dt>
              <dd
                aria-label="RHC value"
                class=""
                data-ouia-component-id="RHC value"
              >
                Connected
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasState 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014 00:00 UTC
              </dd>
              <dt
                aria-label="Last seen title"
                class=""
                data-ouia-component-id="Last seen title"
              >
                Last seen
              </dt>
              <dd
                aria-label="Last seen value"
                class=""
                data-ouia-component-id="Last seen value"
              >
                06 Mar 2025 00:00 UTC
              </dd>
              <dt
                aria-label="Last updated title"
                class=""
                data-ouia-component-id="Last updated title"
              >
                Last updated
              </dt>
              <dd
                aria-label="Last updated value"
                class=""
                data-ouia-component-id="Last updated value"
              >
                01 Jun 2014 00:00 UTC
              </dd>
              <dt
                aria-label="RHC title"
                class=""
                data-ouia-component-id="RHC title"
              >
                <span>
                  RHC
                </span>
                <div
                  style="display: contents;"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Action for RHC"
                    class="pf-v5-c-button pf-m-plain ins-active-general_information__popover-icon"
                    data-ouia-component-id="OUIA-Generated-Button-plain-3"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                      />
                    </svg>
                  </button>
                </div>
              </dt>
              <dd
                aria-label="RHC value"
                class=""
                data-ouia-component-id="RHC value"
              >
                Connected
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Current state title"
                class=""
                data-ouia-component-id="Current state title"
              >
                Current state
              </dt>
              <dd
                aria-label="Current state value"
                class=""
                data-ouia-component-id="Current state value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Last seen title"
                class=""
                data-ouia-component-id="Last seen title"
              >
                Last seen
              </dt>
              <dd
                aria-label="Last seen value"
                class=""
                data-ouia-component-id="Last seen value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Last updated title"
                class=""
                data-ouia-component-id="Last updated title"
              >
                Last updated
              </dt>
              <dd
                aria-label="Last updated value"
                class=""
                data-ouia-component-id="Last updated value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="RHC title"
                class=""
                data-ouia-component-id="RHC title"
              >
                <span>
                  RHC
                </span>
                <div
                  style="display: contents;"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Action for RHC"
                    class="pf-v5-c-button pf-m-plain ins-active-general_information__popover-icon"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                      />
                    </svg>
                  </button>
                </div>
              </dt>
              <dd
                aria-label="RHC value"
                class=""
                data-ouia-component-id="RHC value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Current state title"
                class=""
                data-ouia-component-id="Current state title"
              >
                Current state
              </dt>
              <dd
                aria-label="Current state value"
                class=""
                data-ouia-component-id="Current state value"
              >
                Active
              </dd>
              <dt
                aria-label="Registered title"
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                aria-label="Registered value"
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014 00:00 UTC
              </dd>
              <dt
                aria-label="Last seen title"
                class=""
                data-ouia-component-id="Last seen title"
              >
                Last seen
              </dt>
              <dd
                aria-label="Last seen value"
                class=""
                data-ouia-component-id="Last seen value"
              >
                06 Mar 2025 00:00 UTC
              </dd>
              <dt
                aria-label="Last updated title"
                class=""
                data-ouia-component-id="Last updated title"
              >
                Last updated
              </dt>
              <dd
                aria-label="Last updated value"
                class=""
                data-ouia-component-id="Last updated value"
              >
                01 Jun 2014 00:00 UTC
              </dd>
              <dt
                aria-label="RHC title"
                class=""
                data-ouia-component-id="RHC title"
              >
                <span>
                  RHC
                </span>
                <div
                  style="display: contents;"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Action for RHC"
                    class="pf-v5-c-button pf-m-plain ins-active-general_information__popover-icon"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                      />
                    </svg>
                  </button>
                </div>
              </dt>
              <dd
                aria-label="RHC value"
                class=""
                data-ouia-component-id="RHC value"
              >
                Connected
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
